tests/resolver/test-3.nbl
fun test()
{
    mut t = "1";
    mut t = "2"; // error
}
